# global_news_collector

./: .gitignore  Cargo.toml  Global News Collection 技术文档.md  Study of Financial Economics.md  api记录  全球新闻趋势预测系统需求文档.md  改进清单.md
migrations/: 20260602161718_create_initial_tables.sql
src/: cache.rs  cold_storage.rs  main.rs
src/api/: admin.rs  auth.rs  mod.rs  news.rs  post_mortem.rs  predictions.rs
src/auth/: extractor.rs  middleware.rs  mod.rs
src/collector/: fetcher.rs  mod.rs  noise_analyzer.rs  scheduler.rs
src/judge/: mod.rs  rules.rs
src/llm/: mod.rs
src/stats/: anti_fragile.rs  brier.rs  mod.rs
static/: admin.html  index.html  login.html  news_detail.html  register.html  stats.html
static/js/: auth.js
