[package]
name = "global_news_collector"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"

[dependencies]
# Web 框架
axum = {version = "0.8.9"}
axum-extra = { version = "0.12", features = ["typed-header"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",       # 选择 tokio 异步运行时
    "tls-native-tls",      # 选择 native-tls 作为 TLS 后端
    "postgres",
    "chrono",
    "uuid",
    "json",
    "bigdecimal"
] }
bigdecimal = { version = "0.4", features = ["serde"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }
 
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"


# RSS 解析
rss = "2.0"

# HTTP 客户端
reqwest = { version = "0.13", features = ["json", "stream"] }

# 环境变量
dotenvy = "0.15.7"

# 中文分词
jieba-rs = "0.10"


async-trait = "0.1"

#解析 HTML 提取正文
scraper = "0.27.0"
#firefox阅读模式类似的解析摘取
legible = "0.4.2"
#清理 xss 攻击代码
ammonia = "4.1.2"
# 
urlencoding = "2.1.3"

jsonwebtoken = "9.2"   # JWT 生成与验证
bcrypt = "0.15"        # 密码哈希
uuid = { version = "1.6", features = ["v4"] }

